get plateau attr

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,21 +1,16 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "spatial-id",
       "type": "node",
       "request": "launch",
-      "name": "Launch Program",
-      "skipFiles": [
-        "<node_internals>/**"
-      ],
-      "program": "${workspaceFolder}/data-script/src/index.ts",
-      "sourceMaps": true,
-      "outFiles": [
-        "${workspaceFolder}/**/*.js"
-      ],
+      "runtimeExecutable": "node",
+      "runtimeArgs": ["--nolazy", "-r", "ts-node/register/transpile-only"],
+      "args": ["${workspaceRoot}/data-script/src/plateau.ts"],
+      "cwd": "${workspaceRoot}/data-script",
+      "internalConsoleOptions": "openOnSessionStart",
+      "skipFiles": ["<node_internals>/**", "node_modules/**"]
     }
   ]
 }
