--- a/data-script/package.json
+++ b/data-script/package.json
@@ -9,12 +9,20 @@
   },
   "devDependencies": {
     "@types/geojson": "^7946.0.10",
+    "@types/mapbox__vector-tile": "^1.3.0",
     "@types/node": "^18.11.18",
+    "@types/pbf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@mapbox/mbtiles": "^0.12.1",
+    "@mapbox/vector-tile": "mapbox/vector-tile",
     "@spatial-id/javascript-sdk": "https://github.com/spatial-id/javascript-sdk",
-    "geojson": "^0.5.0"
+    "@turf/bbox-clip": "^6.5.0",
+    "@turf/boolean-intersects": "^6.5.0",
+    "cross-fetch": "^3.1.5",
+    "geojson": "^0.5.0",
+    "pbf": "^3.2.1"
   }
 }
